docs/Haiku-doc.css
/*
 * Copyright 2008, Haiku. All rights reserved.
 * Distributed under the terms of the MIT License.
 *
 * Authors:
 *		François Revol <revol@free.fr>
 *		Stephan Aßmus <superstippi@gmx.de>
 *		Braden Ewing <brewin@gmail.com>
 *		Humdinger <humdingerb@gmail.com>
 */

html {
	margin: 0px;
	padding: 0px;
}
body {
	color: #333333;
	line-height: 1.5;
	margin: 0px; 
	padding: 0px;
	font-family: "DejaVu Sans",Arial,Helvetica,sans-serif;
}

/* link colors and text decoration */

a:link { 
	font-weight: bold; 
	text-decoration: none; 
	color: #dc3c01;
}
a:visited { 
	font-weight: bold; 
	text-decoration: none; 
	color: #892601;
}
a:hover, a:active { 
	text-decoration: underline; 
	color: #ff4500;
}

/* Some headers act as anchors, don't give them a hover effect */

h1 a:hover, a:active {
	text-decoration: none;
	color: #0c3762;
}
h2 a:hover, a:active {
	text-decoration: none;
	color: #0c3762;
}
h3 a:hover, a:active {
	text-decoration: none;
	color: #0c3762;
}
h4 a:hover, a:active {
	text-decoration: none;
	color: #0c3762;
}


/* basic text elements */

div.content {
	margin-top: 50px;
	margin-left: 40px;
	margin-right: 40px;
	margin-bottom: 50px;
}

/* heading and navigation */

div.logo {
	position: relative;
	left: 0px;
	top: 0px;
	background: #efefef;
}
div.logo img {
	margin-left: 20px;
}
div.title {
	position: absolute;
	top: 54px;
	right: 40px;
	font-size: 1.2em;
	line-height: 1.0;
}
div.topnav {
	background: #e0e0e0;
	line-height: 1.0;
}
div.topnav p {
	margin-left: 40px;
	margin-top: 0px;
	margin-right: 40px;
	margin-bottom: 0px;
	text-align: right;
	font-size: 0.8em;
}
div.bottomnav {
	background: #efefef;
}
div.bottomnav p {
	margin-left: 40px;
	margin-top: 0px;
	margin-right: 40px;
	margin-bottom: 0px;
	text-align: right;
	font-size: 0.8em;
}


/* Haiku User Guide styles and layout */

/* Rounded corner boxes */
/* Common declarations */
.box-info, .box-stop, .box-warning {
	-webkit-border-radius: 10px;
	-khtml-border-radius: 10px;	
	-moz-border-radius: 10px;
	border-radius: 10px;
	border-style: dotted;
	border-width: thin;
	border-color: #dcdcdc;
	padding: 10px 15px 10px 80px;
	margin-bottom: 15px;
	margin-top: 15px;
	min-height: 42px;
}
.box-info {
	background: #e4ffde url(userguide/images/alert_info_32.png) 15px 15px no-repeat;
}
.box-warning {
	background: #fffbc6 url(userguide/images/alert_warning_32.png) 15px 15px no-repeat;
}
.box-stop {
	background: #ffeae6 url(userguide/images/alert_stop_32.png) 15px 15px no-repeat;
}

/* More layout and styles */
h1 {
	font-size: 1.3em;
	font-weight: normal;
	color: #0c3762;
	border-bottom: dotted thin #e0e0e0;
	margin-top: 50px;
}
h2 {
	font-size: 1.2em;
	font-weight: normal;
	color: #0c3762;
	border-bottom: dotted thin #e0e0e0;
	margin-top: 40px;
}
h3 {
	font-size: 1.1em;
	font-weight: normal;
	color: #0c3762;
	margin-top: 30px;
}
h4 {
	font-size: 1.0em;
	font-weight: normal;
	color: #0c3762;
	margin-top: 30px;
}
p {
	text-align: justify;
}
ol {
	padding-left: 20px;
}
ul {
	padding-left: 14px;
}
li {
	line-height: 1.3;
}
td {
	vertical-align: top;
}
td.onelinetop {
	vertical-align: top;
	white-space: nowrap;
}
tt {
    	background-color: #e2e2e2;
    	font-size: 1.0em;
    	font-family: monospace;
}
pre {
	border-color: #0c3762;
	border-style: dotted;
	border-width: thin;
	margin: 0em;
	padding: 1.5em;
	background-color: #f0f0f0;
}
pre.terminal {			/* Terminal output*/
	border-color: #ffb11f;
	border-style: dotted;
	border-width: thin;
	margin: 0em;
	padding: 1.5em;
	background-color: #3a3a3a;
	color: #ffb11f;
}
.menu {				/* Menu */
    	font-size: 1.0em;
    	font-family: serif;
    	font-style: italic;
	color: #24225e;
}
.button {			/* Button */
    	font-size: 1.0em;
    	font-family: serif;
    	font-style: italic;
	color: #33583c;
}
.app {				/* GUI Application name */
    	font-size: 1.0em;
    	font-family: serif;
    	font-style: italic;
/* 	color: #5e1c1c; */
	color: #5e1c1c;
}
.cli {				/* Shell command or file */
    	background-color: #e8e8e8;
    	font-size: 0.9em;
    	font-family: monospace;
}
.path {				/* File path */
    	background-color: #e8e8e8;
    	font-size: 0.9em;
    	font-family: monospace;
}
.key {				/* Shortcut (separate with &#160; */
	-webkit-border-radius: 3px;
	-khtml-border-radius: 3px;	
	-moz-border-radius: 3px;
	border-radius: 3px;
	border-color: #c7c7c7;
	border-style: solid;
	border-width: 1px;
	padding: 0px 2px 0px 2px;
	background-color: #e8e8e8;
    	font-family: serif;
   	font-variant: small-caps;
  	font-size: 0.8em;
}

